# cnijfilter-common

./: .bzrignore  .gitignore  LICENSE-cnijfilter-3.70EN.txt  LICENSE-cnijfilter-3.70FR.txt  LICENSE-cnijfilter-3.70JP.txt  LICENSE-cnijfilter-3.70SC.txt  LICENSE-cnijfilter-3.80EN.txt  LICENSE-cnijfilter-3.80FR.txt  LICENSE-cnijfilter-3.80SC.txt  LICENSE-cnijfilter-3.90JP.txt  LICENSE-cnijfilter-4.00FR.txt  LICENSE-cnijfilter-4.10EN.txt  LICENSE-cnijfilter-4.10JP.txt  LICENSE-cnijfilter-4.10SC.txt  Makefile  README  cnijfilter-common.spec  make-symlink.sh
backendnet/: ChangeLog  INSTALL  Makefile.am  NEWS  README  acconfig.h  autogen.sh  configure.in
backendnet/backend/: Makefile.am  cnijnet.c  cnijnetlm.c  cnijnetlm.h
backendnet/lmonitor/: Makefile.am  acconfig.h  cnijnetchk.c  cnijnetchk.h  cnijnetprn.c  cnijnetprn.h
bscc2sts/: INSTALL  configure.in
bscc2sts/src/: 550ifunc.c  550itbl.c  560ifunc.c  560itbl.c  850ifunc.c  850itbl.c  860ifunc.c  860itbl.c  950ifunc.c  950itbl.c  990ifunc.c  990itbl.c  Makefile.am  bscc2sts.c  bscc2sts.h  bsccstruct.h  commonfunc.c  commonfunc.h  f9xxfunc.c  f9xxtbl.c  ip1000func.c  ip1000tbl.c  ip100func.c  ip100tbl.c  ip2200func.c  ip2200tbl.c  ip2500func.c  ip2500tbl.c  ip3100func.c  ip3100tbl.c  ip4100func.c  ip4100tbl.c  ip4200func.c  ip4200tbl.c  ip6600dfunc.c  ip6600dtbl.c  ip7500func.c  ip7500tbl.c  ip8600func.c  ip8600tbl.c  (+36 more)
cmdtocanonij/: ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in
cmdtocanonij/filter/: Makefile.am  cmdtocanonij.c
cngpijmnt/src/: Makefile.am  bjutil.c  bjutil.h  getipc.c  main.c
cngpijmon/: NEWS  README  configure.in
cngpijmon-2.50/: ChangeLog  NEWS  configure.in
cngpijmon-2.50/pixmaps/: Ink_out.xpm
cngpijmon-2.50/po/: cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ru.po  sv.po  th.po  zh.po  zh_TW.po
cngpijmon-2.50/src/: Makefile.am  bjcupsmon_callbacks.c  bjcupsmon_common.h  bjcupsmon_cups.c  bjcupsmon_cups.h  bjcupsmon_draw.c  bjcupsmon_draw.h  bjcupsmon_err.h  bjcupsmon_funcprot.h  bjcupsmon_main.c  bjcupsmon_msgidset.c  bjcupsmon_transsts.c  bjcupsmon_transsts.h  bjcupsmon_ui.c  bjcupsmon_ui.h  interface.c
cngpijmon-3.30/: ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  cngpijmon.glade2  cngpijmon.glade2p  configure.in
cngpijmon-3.30/cnijnpr/: ChangeLog  INSTALL  NEWS  acconfig.h  configure.in
cngpijmon-3.30/pixmaps/: Icon_15_Low.xpm  Icon_16_Unknown.xpm  Icon_Out.xpm  Icond2_Out.xpm  Icond_Low.xpm  Icond_Out.xpm  Icond_Refill.xpm  Iconw_Refill.xpm  Ink26b.xpm  Ink26bb.xpm  Ink26c.xpm  Ink26cy.xpm  Ink26ma.xpm  Ink26pc.xpm  Ink26pm.xpm  Ink26sb.xpm  Ink_15.xpm  Ink_16.xpm  Ink_16_Level40.xpm  Ink_24c3.xpm  Ink_Level_00.xpm  Ink_Level_70.xpm  Ink_bb.xpm  Ink_cy.xpm  Ink_el.xpm  Ink_er.xpm  Ink_low070.xpm  Ink_low_bb.xpm  Ink_out_bb.xpm  Ink_pb.xpm  Ink_pm.xpm  Ink_re.xpm  Ink_sp.xpm  Inkd2_Level_70.xpm  Inkd_Level_70.xpm  Inkd_Level_uk.xpm  Inkg26bb.xpm  Inkg26c.xpm  Inkg26pc.xpm  Inkg26sb.xpm  (+9 more)
cngpijmon-3.30/po/: POTFILES.in  cngpijmon.pot  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  glade.h  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  ru.po  sv.po  th.po  tr.po  zh.po  zh_TW.po
cngpijmon-3.30/src/: Makefile.am  bjcupsmon_callbacks.c  bjcupsmon_common.h  bjcupsmon_cups.c  bjcupsmon_data.h  bjcupsmon_datastrptr.h  bjcupsmon_draw.c  bjcupsmon_draw.h  bjcupsmon_err.h  bjcupsmon_main.c  bjcupsmon_msgidset.c  bjcupsmon_transsts.h  bjcupsmon_ui.c  interface.c  interface.h
cngpijmon/cnijnpr/: ChangeLog  NEWS  README  configure.in
cngpijmon/pixmaps/: Icond2_Low.xpm  Inkd2_Level_00.xpm  Inkd_Level_00.xpm
cngpijmon/po/: de.po  fr.po  hu.po  id.po  it.po  ko.po  nb.po  nl.po  pt.po  th.po  tr.po  zh.po  zh_TW.po
cngpijmon/src/: Makefile.am  bjcupsmon_cups.c  bjcupsmon_data.h  bjcupsmon_datastrptr.h  bjcupsmon_draw.h  bjcupsmon_msgidset.c  bjcupsmon_transsts.c  bjcupsmon_ui.h
cnijfilter/: INSTALL  NEWS  configure.in
cnijfilter-2.20/: AUTHORS  ChangeLog  README  configure.in
cnijfilter-2.20/src/: Makefile.am  bjferror.c  bjfilter.c  bjfilter.conf  bjfilter.h  bjfimage.c  bjflist.h  bjfoption.c  bjfoption.h  bjfpos.c  bjfpos.h  bjfrcaccess.c  bjfrcaccess.h  bjfversion.h  bjipc.h  cif.conf  getipc.c
cnijfilter-2.40/: ChangeLog  INSTALL  NEWS  README  configure.in
cnijfilter-2.40/src/: Makefile.am  bjferror.h  bjfilter.c  bjfilter.conf  bjfilter.h  bjfimage.c  bjfimage.h  bjflist.c  bjfoption.c  bjfoption.h  bjfpath.h  bjfpos.c  bjfrcaccess.c  bjfrcaccess.h  bjfversion.h  bjipc.h  cif.conf  getipc.c  uitypes.h
cnijfilter-2.70/: ChangeLog  NEWS  configure.in
cnijfilter-2.70/src/: bjferror.c  bjfilter.c  bjfimage.h  bjflist.h  bjfpos.c  bjfpos.h  bjfrcaccess.c  bjfrcaccess.h  bjfversion.h  bjipc.h  cif.conf  uitypes.h
cnijfilter-3.00/: ChangeLog  INSTALL  NEWS  configure.in
cnijfilter-3.00/src/: bjferror.c  bjferror.h  bjfilter.c  bjfilter.h  bjfimage.c  bjfimage.h  bjflist.c  bjflist.h  bjfoption.c  bjfoption.h  bjfpath.h  bjfpos.c  bjfpos.h  (+5 more)
cnijfilter-3.20/: ChangeLog  INSTALL  NEWS  configure.in
cnijfilter-3.30/: ChangeLog  INSTALL  NEWS  README  acconfig.h  configure.in
cnijfilter-3.40/: ChangeLog  INSTALL  NEWS  configure.in
cnijfilter-3.70/: ChangeLog  INSTALL  NEWS  configure.in
cnijfilter-4.00/: ChangeLog  INSTALL  NEWS  README  configure.in
cnijfilter-4.10/: ChangeLog  INSTALL  NEWS  configure.in
cnijnpr/: ChangeLog  NEWS  README  autogen.sh  configure.in
lgmon-3.00/: ChangeLog  INSTALL  NEWS  configure.in
lgmon-3.30/: ChangeLog  INSTALL  Makefile.am  NEWS  configure.in
lgmon2/: ChangeLog  INSTALL  Makefile.am  NEWS  README  acconfig.h  configure.in  keytext.sh
libs/: INSTALL  Makefile.am  configure.in
ppd-3.80/: INSTALL  canonmg2200.ppd  canonmg5400.ppd  canonmp230.ppd  configure.in
printui-2.80/: ChangeLog  INSTALL  Makefile.am  NEWS  configure.in  printui.glade
printui-3.30/: ChangeLog  INSTALL  NEWS  acconfig.h  configure.in  printui.glade  printui.gladep
pstocanonij/: ChangeLog  INSTALL  NEWS  acconfig.h  configure.in
(+6212 files in other folders)
