dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_ARG_PROGRAM

AM_INIT_AUTOMAKE(libbscc2sts, 4.10-1)
AM_CONFIG_HEADER(config.h)

AC_DEFINE_UNQUOTED(PACKAGE_PRINTER_MODEL, "${program_suffix}")

AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

CFLAGS="-O2"

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_OUTPUT([  
Makefile
src/Makefile
include/Makefile
include/cncl/Makefile
])

