dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

if test "${program_suffix}" = "NONE"; then
  program_suffix="ip3300"
  program_transform_name="s,\$\$,${program_suffix},;"
fi

AC_ARG_ENABLE(libpath)
if test "${enable_libpath}" = ""; then
  enable_libpath="/usr/lib/bjlib"
fi

AC_DEFINE([PACKAGE], [], [Description])
AC_DEFINE([VERSION], [], [Description])
AC_DEFINE([XBJLIBPATH], [], [Description])
AC_DEFINE([XBINPATH], [], [Description])

AC_DEFINE_UNQUOTED(XBJLIBPATH, $enable_libpath)
AC_SUBST(XBJLIBPATH)


AC_ARG_ENABLE(binpath)
if test "${enable_binpath}" = ""; then
  enable_binpath="/usr/local/bin"
fi

AC_DEFINE_UNQUOTED(XBINPATH, $enable_binpath)
AC_SUBST(XBINPATH)


AM_INIT_AUTOMAKE(cif${program_suffix}, 2.70-2)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_ISC_POSIX

case "${program_suffix}" in
  ip90) CNCL_LIB_ID=253;;
  ip3300) CNCL_LIB_ID=292;;
  mp510) CNCL_LIB_ID=293;;
  ip4300) CNCL_LIB_ID=294;;
  mp600) CNCL_LIB_ID=295;;
  mp160) CNCL_LIB_ID=291;;
  ip2500) CNCL_LIB_ID=311;;
  ip1800) CNCL_LIB_ID=312;;
  CN_IJ_MODEL) CNCL_LIB_ID=CN_IJ_MODEL_NUM;;
esac
AC_SUBST(CNCL_LIB_ID)

case "$CFLAGS" in
  *-m32* ) ARC="32";;
  *) ARC=`getconf LONG_BIT` 
esac

AC_SUBST(ARC)

AC_PROG_CC
AM_PROG_CC_STDC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl OPTION
case "$CFLAGS" in
  *-O2* ) ;;
  *) CFLAGS="$CFLAGS -O2"
esac

dnl Checks for library functions.
AC_CHECK_FUNCS(socket)

AC_OUTPUT([
Makefile
src/Makefile
include/Makefile
include/cncl/Makefile
include/misc/Makefile
])
