dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

if test "${program_suffix}" = "NONE"; then
  program_suffix="ip4600"
  program_transform_name="s,\$\$,${program_suffix},;"
fi

AC_ARG_ENABLE(libpath)
if test "${enable_libpath}" = ""; then
  enable_libpath="/usr/lib/bjlib"
fi

AC_DEFINE([PACKAGE], [], [Description])
AC_DEFINE([VERSION], [], [Description])
AC_DEFINE([XBJLIBPATH], [], [Description])
AC_DEFINE([XBINPATH], [], [Description])

AC_DEFINE_UNQUOTED(XBJLIBPATH, $enable_libpath)
AC_SUBST(XBJLIBPATH)


AC_ARG_ENABLE(binpath)
if test "${enable_binpath}" = ""; then
  enable_binpath="/usr/local/bin"
fi

AC_DEFINE_UNQUOTED(XBINPATH, $enable_binpath)
AC_SUBST(XBINPATH)


AM_INIT_AUTOMAKE(cif${program_suffix}, 3.00-1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_ISC_POSIX

case "${program_suffix}" in
  ip3600) CNCL_LIB_ID=333;;
  ip4600) CNCL_LIB_ID=334;;
  mp630) CNCL_LIB_ID=336;;
  mp540) CNCL_LIB_ID=338;;
  mp240) CNCL_LIB_ID=341;;
  mp190) CNCL_LIB_ID=342;;
  ip1900) CNCL_LIB_ID=346;;
  CN_IJ_MODEL) CNCL_LIB_ID=CN_IJ_MODEL_NUM;;
esac
AC_SUBST(CNCL_LIB_ID)

case "$CFLAGS" in
  *-m32* ) ARC="32";;
  *) ARC=`getconf LONG_BIT` 
esac

AC_SUBST(ARC)

AC_PROG_CC
AM_PROG_CC_STDC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl OPTION
case "$CFLAGS" in
  *-O2* ) ;;
  *) CFLAGS="$CFLAGS -O2"
esac

dnl Checks for library functions.
AC_CHECK_FUNCS(socket)

AC_OUTPUT([
Makefile
src/Makefile
include/Makefile
include/cncl/Makefile
include/misc/Makefile
])
