AC_INIT(configure.in)
AM_INIT_AUTOMAKE(cnijnpr, 4.00-1)

AM_CONFIG_HEADER(config.h)


AC_ARG_ENABLE(libpath)
if test "${enable_libpath}" = "" ; then
   enable_libpath="/usr/lib/bjlib"
fi

AC_DEFINE_UNQUOTED(BJLIB_PATH, "$enable_libpath")
AC_SUBST(BJLIB_PATH)


# Checks for programs.
#AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
#AM_PROG_LIBTOOL


# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset socket strdup strrchr])

CFLAGS="-O2"

ARC=`getconf LONG_BIT`
AC_SUBST(ARC)

AC_OUTPUT(Makefile
                 src/Makefile)
