dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_ARG_PROGRAM

if test "${program_suffix}" = "NONE"; then
  program_suffix="mp630"
  program_transform_name="s,\$\$,${program_suffix},;"
fi

AM_INIT_AUTOMAKE(lgmon{program_suffix}, 3.00-1)
AM_CONFIG_HEADER(config.h)
dnl AM_MAINTAINER_MODE

AC_DEFINE([PROG_PATH], [], [Description])
AC_DEFINE([PACKAGE_LOCALE_DIR], [], [Description])
AC_DEFINE([PACKAGE_DATA_DIR], [], [Description])
AC_DEFINE([PACKAGE_SOURCE_DIR], [], [Description])
AC_DEFINE([PACKAGE_PRINTER_MODEL], [], [Description])

AC_DEFINE_UNQUOTED(PACKAGE_PRINTER_MODEL, "${program_suffix}")

AC_ARG_ENABLE(progpath)
if test "${enable_progpath}" = "" ; then
   enable_progpath="${ac_default_prefix}/bin"
fi

AC_DEFINE_UNQUOTED(PROG_PATH, "$enable_progpath")
AC_SUBST(PROG_PATH)

AC_ISC_POSIX

case "$CFLAGS" in
  *-m32* ) ARC="32";;
  *) ARC=`getconf LONG_BIT` 
esac

AC_SUBST(ARC)

AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

AM_PATH_GTK_2_0(2.0.0, ,
            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
fi

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

case "$CFLAGS" in
  *-O2* ) ;;
  *) CFLAGS="$CFLAGS -O2"
esac

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_OUTPUT([  
Makefile
src/Makefile
])

